Add explicit social image refs

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
+  <meta property="og:image" content="/assets/social.png">
+  <meta name="twitter:image" content="/assets/social.png">
   <link rel="shortcut icon" href="{{ "/assets/profile.png" | relative_url }}">
   <link rel="apple-touch-icon" href="{{ "/assets/profile.png" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
