change: Update wording, update home page

--- a/_sass/_gallery.scss
+++ b/_sass/_gallery.scss
@@ -21,3 +21,15 @@ section.gallery {
     }
   }
 }
+
+.home-photos {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  margin: 2rem 0;
+  img:first-child {
+    margin-right: 4vw;
+  }
+}
