change: Blog template, update illustration, more.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
+<hr/>
 <footer>
   <p>
     <a href='#' class="back-to-top">Back to top</a> ·
@@ -8,7 +9,8 @@
     <a href="https://webring.xxiivv.com/#random" target="_blank" class="webring-link">Webring</a>
   </p>
   <p>
-    &copy; 2007&ndash;2020 Gueorgui Tcherednitchenko ·
-    <a href="/colophon">Colophon</a>
+    &copy; 2007&ndash;2020 Gueorgui Tcherednitchenko<br>
+    <a href="/colophon">Colophon</a> ·
+    <a href="/feed.xml">RSS</a>
   </p>
 </footer>
