--- a/_sass/_emoji.scss
+++ b/_sass/_emoji.scss
@@ -61,29 +61,32 @@ licensed under MIT: https://ellekasai.mit-license.org/
 }
 
 .twa-love-letter {
-    background-image: url("/assets/images/icons/love-letter.svg")
+  background-image: url("/assets/images/icons/love-letter.svg");
 }
 .twa-man-raising-hand-light-skin-tone {
-    background-image: url("/assets/images/icons/man-raising-hand.svg")
+  background-image: url("/assets/images/icons/man-raising-hand.svg");
 }
 .twa-red-heart {
-    background-image: url("/assets/images/icons/heart.svg")
+  background-image: url("/assets/images/icons/heart.svg");
 }
 .twa-pencil {
-    background-image: url("/assets/images/icons/pencil.svg")
+  background-image: url("/assets/images/icons/pencil.svg");
 }
 .twa-triangular-ruler {
-    background-image: url("/assets/images/icons/triangular-ruler.svg")
+  background-image: url("/assets/images/icons/triangular-ruler.svg");
 }
 .twa-pirate-flag {
-    background-image: url("/assets/images/icons/pirate-flag.svg")
+  background-image: url("/assets/images/icons/pirate-flag.svg");
 }
 .twa-flag-european-union {
-    background-image: url("/assets/images/icons/eu-flag.svg")
+  background-image: url("/assets/images/icons/eu-flag.svg");
 }
 .twa-flag-united-kingdom {
-    background-image: url("/assets/images/icons/uk-flag.svg")
+  background-image: url("/assets/images/icons/uk-flag.svg");
 }
 .twa-high-voltage {
-    background-image: url("/assets/images/icons/zap.svg")
+  background-image: url("/assets/images/icons/zap.svg");
+}
+.twa-cricket {
+  background-image: url("/assets/images/icons/cricket.svg");
 }
