--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,32 +7,32 @@
         </a>
       </li>
       <li>
-        <a class="nav-item{% if page.active == 'home' %} active{% endif %}" href="/">
+        <a class="nav-item{% if active == 'home' %} active{% endif %}" href="/">
           <i class="twa twa-pirate-flag"></i> Home
         </a>
       </li>
       <li>
-        <a class="nav-item{% if page.active == 'projects' %} active{% endif %}" href="/projects">
+        <a class="nav-item{% if active == 'projects' %} active{% endif %}" href="/projects">
           <i class="twa twa-triangular-ruler"></i> Projects
         </a>
       </li>
       <li>
-        <a class="nav-item{% if page.active == 'blog' %} active{% endif %}" href="/blog">
+        <a class="nav-item{% if active == 'blog' %} active{% endif %}" href="/blog">
           <i class="twa twa-pencil"></i> Blog
         </a>
       </li>
       <li>
-        <a class="nav-item{% if page.active == 'newsletter' %} active{% endif %}" href="/newsletter">
+        <a class="nav-item{% if active == 'newsletter' %} active{% endif %}" href="/newsletter">
           <i class="twa twa-love-letter"></i> Newsletter
         </a>
       </li>
       <li>
-        <a class="nav-item{% if page.active == 'about' %} active{% endif %}" href="/about">
+        <a class="nav-item{% if active == 'about' %} active{% endif %}" href="/about">
           <i class="twa twa-man-raising-hand-light-skin-tone"></i> About
         </a>
       </li>
       <li>
-        <a class="nav-item{% if page.active == 'now' %} active{% endif %}" href="/now">
+        <a class="nav-item{% if active == 'now' %} active{% endif %}" href="/now">
           <i class="twa twa-high-voltage"></i> Now
         </a>
       </li>
