change: Add message to Netrunners!

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,9 @@
-<!-- Ref: https://htmlhead.dev -->
+<!-- Greetings, Netrunner!
+     I learned to write HTML, CSS, and Javascript by looking through the source
+     code of many, many websites. Please, feel free to dig through! The source
+     code is available on GitHub: https://github.com/gueorgui/gueorgui.github.io,
+     and you're very welcome to email me with any questions: hello@gueorgui.net -->
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="{{ site.meta.theme_color }}">
