change: Blog and RSS design

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,9 @@
   <p>
     &copy; 2007&ndash;2020 Gueorgui Tcherednitchenko<br>
     <a href="/colophon">Colophon</a> ·
-    <a href="/feed.xml">RSS</a>
+    <a href="/feed.xml" class="rss-link">
+      <span class="link-text">RSS</span>
+      {% include rss_logo.svg %}
+    </a>
   </p>
 </footer>
