--- a/_includes/post_card.html
+++ b/_includes/post_card.html
@@ -1,9 +1,9 @@
-<article>
-  <header>
-    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-    <div class="meta">
-      <time datetime="{{ post.date | date: "%Y-%m-%d" }}">{{ post.date | date: "%e %B %Y" }}</time>
-    </div>
-  </header>
-  <p>{{ post.summary }}</p>
+<article class="post-card">
+  <time datetime="{{ post.date | date: "%Y-%m-%d" }}">{{ post.date | date: "%Y/%m/%d" }}</time>
+  <div class="contents">
+    <header>
+      <strong><a href="{{ post.url }}">{{ post.title }}</a></strong>
+    </header>
+    <p>{{ post.summary }}</p>
+  </div>
 </article>
