new: Project layout and metadata design

--- a/_sass/_emoji.scss
+++ b/_sass/_emoji.scss
@@ -90,3 +90,9 @@ licensed under MIT: https://ellekasai.mit-license.org/
 .twa-cricket {
   background-image: url("/assets/images/icons/cricket.svg");
 }
+.twa-label {
+  background-image: url("/assets/images/icons/label.svg");
+}
+.twa-hourglass-not-done {
+  background-image: url("/assets/images/icons/hourglass.svg");
+}
