--- a/_sass/_gallery.scss
+++ b/_sass/_gallery.scss
@@ -1,14 +1,14 @@
 
 .project-metadata {
-  margin: 0 -1rem 1rem;
   font-family: var(--font-mono);
   font-size: var(--font-small);
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: stretch;
+  flex-wrap: wrap;
 
   .metadata-item {
+    white-space: nowrap;
     margin-right: 1rem;
   }
 }
@@ -51,5 +51,73 @@ section.gallery {
     img {
       max-width: 100%;
     }
+  }
+}
+
+.projects-grid {
+  margin: 2rem 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 2rem;
+  grid-row-gap: 2rem;
+
+  .project-card {
+    background-size: cover;
+    background-position-y: 50%;
+    background-position-x: 50%;
+
+    &::before {
+      // This is a hack to make cards square.
+      // See this SO answer:
+      // https://stackoverflow.com/a/29308459/12288625
+      content: '';
+      height: 100%;
+      float: left;
+      display: block;
+      padding-top: 100%;
+    }
+    a {
+      display: block;
+      text-decoration: none;
+      width: 100%;
+      height: 100%;
+      position: relative;
+      color: var(--color-text-subdued);
+      &:hover {
+        header h3 {
+          color: var(--color-highlight);
+        }
+      }
+    }
+    header {
+      position: absolute;
+      bottom: 1rem;
+      left: 1rem;
+      background-color: rgba(0,0,0,0.9);
+      display: inline-block;
+      width: auto;
+      padding: 0.5rem 0.7rem;
+      border-radius: 0.2rem;
+
+      h3 {
+        margin-top: 0;
+        color: white;
+        transition: color .2s ease-out;
+      }
+      .meta {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
+@media (min-width: 481px) and (max-width: 1025px) {
+  .projects-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 480px) {
+  .projects-grid {
+    grid-template-columns: 1fr;
   }
 }
