--- a/_sass/_emoji.scss
+++ b/_sass/_emoji.scss
@@ -96,3 +96,6 @@ licensed under MIT: https://ellekasai.mit-license.org/
 .twa-hourglass-not-done {
   background-image: url("/assets/images/icons/hourglass.svg");
 }
+.twa-grinning-face-with-sweat {
+  background-image: url("/assets/images/icons/grinning-face-with-sweat.svg");
+}
