change: Improve Drop Caps

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -34,9 +34,10 @@
       font-size: 4rem;
       float: left;
       margin-top: -0.2rem;
-      margin-right: 0.1rem;
+      margin-right: 0.3rem;
       font-weight: bold;
       color: var(--color-link);
+      line-height: 4rem;
     }
   }
 }
