new: Add dissertation project

--- a/_sass/_gallery.scss
+++ b/_sass/_gallery.scss
@@ -171,6 +171,7 @@ section.gallery {
       position: absolute;
       bottom: 1rem;
       left: 1rem;
+      margin-right: 1rem;
       background-color: rgba(0,0,0,0.9);
       display: inline-block;
       width: auto;
