new: Blog post, layout improvements

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,4 +18,9 @@ active: blog
   <section>
     {{ content }}
   </section>
+  <aside class="comments">
+    Please get in touch by <a href="mailto:hello@gueorgui.net?subject=Comment on '{{ page.title }}'">email</a>, on
+    <a href="https://merveilles.town/@gueorgui">Mastodon</a>, or on
+    <a href="https://twitter.com/gueorgui">Twitter</a> if you'd like to comment. I reply to all!
+  </aside>
 </article>
