--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -209,6 +209,10 @@ section[name='bio'] figure.centered {
   margin: 0 auto;
 }
 
+.text-centered {
+  text-align: center;
+}
+
 sup.reference {
   display: inline-block;
   min-width: 0.5rem;
