--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -63,3 +63,13 @@
     }
   }
 }
+
+.meta .location {
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  font-size: 0.8rem;
+}
+
+aside.comments {
+  margin-top: 4rem;
+}
