--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -22,7 +22,25 @@
 }
 
 .blog article {
-  max-width: var(--max-width);
+  .video {
+    max-width: var(--max-width);
+    width: 100%;
+    margin: 2rem auto;
+    .embed-container {
+      position: relative;
+      padding-bottom: 56.25%;
+      padding-top: 30px;
+      height: 0;
+      overflow:hidden;
+      iframe, object, embed {
+        position:absolute;
+        top:0;
+        left:0;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
   hr {
     width: 3rem;
     margin: 2rem auto;
