new: Add PGP public key and link in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,11 +2,10 @@
 <footer>
   <p>
     <a href='#' class="back-to-top">Back to top</a> ·
-    <a href="mailto:hello@gueorgui.net">hello@gueorgui.net</a> ·
+    <a href="mailto:hello@gueorgui.net">hello@gueorgui.net</a> (PGP: <code><a href="/publickey.txt">A111E4DBD40D6E13</a></code>) ·
     <a rel="me" href="https://merveilles.town/@gueorgui">Merveilles</a> ·
     <a rel="me" href="https://twitter.com/gueorgui">Twitter</a> ·
-    <a rel="me" href="https://github.com/gueorgui">GitHub</a> ·
-    <a href="https://webring.xxiivv.com/#random" target="_blank" class="webring-link">Webring</a>
+    <a rel="me" href="https://github.com/gueorgui">GitHub</a>
   </p>
   <p>
     &copy; 2007&ndash;2020 Gueorgui Tcherednitchenko<br>
@@ -14,7 +13,8 @@
     <a href="/feed.xml" class="rss-link">
       <span class="link-text">RSS</span>
       {% include rss_logo.svg %}
-    </a>
+    </a> ·
+    <a href="https://webring.xxiivv.com/#random" target="_blank" class="webring-link">Webring</a>
   </p>
   <p class="motto">
     Per Aspera Ad Astra
