change: Update gems, logo, README

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,7 +3,7 @@
     <ul>
       <li class="logo">
         <a href="/">
-          <img src="/assets/images/logo.jpg" alt="Website logo" />
+          <img src="/assets/images/logo.png" alt="Website logo" />
         </a>
       </li>
       <li>
