change: Update motto, update colophon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,6 @@
     <a href="https://webring.xxiivv.com/#random" target="_blank" class="webring-link">Webring</a>
   </p>
   <p class="motto">
-    Per Aspera Ad Astra
+    Через тернии к звёздам
   </p>
 </footer>
