--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
 <meta name="google" content="nositelinkssearchbox">
 <meta name="generator" content="Jekyll 4.0">
 <meta name="format-detection" content="telephone=no">
+<meta name="color-scheme" content="light dark">
 <link rel="canonical" href="{{ site.url }}{{ page.url }}">
 <title>{% if page.title %}{{ page.title }} → {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
 <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png" />
