--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <!-- Greetings, Netrunner!
      I learned to write HTML, CSS, and Javascript by looking through the source
      code of many, many websites. Please, feel free to dig through! The source
-     code is available on GitHub: https://github.com/gueorgui/gueorgui.github.io,
+     code is available on GitHub: https://github.com/gueorgui/gueorgui.net,
      and you're very welcome to email me with any questions: hello@gueorgui.net -->
 
 <meta charset="utf-8">
