--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,11 @@
     </a> ·
     <a href="https://webring.xxiivv.com/#random" target="_blank" class="webring-link">Webring</a>
   </p>
+  <p>
+    <a href="https://gueorgui.net">
+      <img src="/assets/images/88x31.gif" width="88" height="31" alt="Link free!" title="Link free!" />
+    </a>
+  </p>
   <p class="motto">
     Через тернии к звёздам
   </p>
