--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer>
   <p>
     <a href='#' class="back-to-top">Back to top</a> ·
-    <a href="mailto:hello@gueorgui.net">hello@gueorgui.net</a> ·
+    <a href="mailto:gueorgui@possible.space">gueorgui@possible.space</a> ·
     <a rel="me" href="https://merveilles.town/@gueorgui">Merveilles</a> ·
     <a rel="me" href="https://twitter.com/gueorgui">Twitter</a> ·
     <a rel="me" href="https://github.com/gueorgui">GitHub</a>
