--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ active: blog
   {{ content }}
 </article>
 <aside class="comments">
-  Have a comment? Please get in touch by <a href="mailto:hello@gueorgui.net?subject=Re: {{ page.title }}">email</a>, on
+  Have a comment? Please get in touch by <a href="mailto:gueorgui@possible.space?subject=Re: {{ page.title }}">email</a>, on
   <a href="https://merveilles.town/@gueorgui">Mastodon</a>, or on
   <a href="https://twitter.com/gueorgui">Twitter</a>. I do my best to reply to all.
 </aside>
