change: War update

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -252,21 +252,36 @@ section, article {
   }
 }
 
-a.hero {
-  width: 100%;
-  text-align: center;
-  text-decoration: none;
-  font-size: 10rem;
-  line-height: 1;
-  font-weight: bold;
-  padding: 4rem 0;
-  background: -webkit-linear-gradient(#005BBB , #FFD500);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+.hero {
+  background-image: url(/assets/images/home_war.jpg);
+  background-size: cover;
+  background-position: center;
+  margin: 3rem 0;
+  a {
+    color: white;
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 10rem 0;
+    text-align: center;
+    text-decoration: none;
+    font-size: 10rem;
+    line-height: 1;
+    font-weight: bold;
+    &:hover {
+      .ua-flag-top {
+        color: #005BBB;
+      }
+      .ua-flag-bottom {
+        color: #FFD500;
+      }
+    }
+  }
 }
 
 @media (max-width: 480px) {
-  a.hero {
+  .hero a {
     font-size: 5rem;
+    padding: 6rem 0;
   }
 }
