--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,9 @@
 <footer>
   <p>
     <a href='#' class="back-to-top">Back to top</a> ·
-    <a href="mailto:gueorgui@possible.space">gueorgui@possible.space</a> ·
-    <a rel="me" href="https://merveilles.town/@gueorgui">Merveilles</a> ·
+    <a href="mailto:mail@gosha.net">mail@gosha.net</a> ·
+    <a rel="me" href="https://twitter.com/goshaphoto">Twitter</a> ·
+    <a rel="me" href="https://instagram.com/gosha.tch">Instagram</a> ·
     <a rel="me" href="https://github.com/gueorgui">GitHub</a>
   </p>
   <p>
