--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
      I learned to write HTML, CSS, and Javascript by looking through the source
      code of many, many websites. Please, feel free to dig through! The source
      code is available on GitHub: https://github.com/gueorgui/gueorgui.net,
-     and you're very welcome to email me with any questions: gueorgui@possible.space -->
+     and you're very welcome to email me with any questions: mail@gosha.net -->
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
