--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,6 @@ active: blog
   {{ content }}
 </article>
 <aside class="comments">
-  Have a comment? Please get in touch by <a href="mailto:gueorgui@possible.space?subject=Re: {{ page.title }}">email</a>, or on
-  <a href="https://merveilles.town/@gueorgui">Mastodon</a>.
+  Have a comment? Please get in touch by <a href="mailto:mail@gosha.net?subject=Re: {{ page.title }}">email</a>, or on
+  <a href="https://twitter.com/goshaphoto">Twitter</a>.
 </aside>
