--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,9 @@
   <p>
     <a href='#' class="back-to-top">Back to top</a> ·
     <a href="mailto:mail@gosha.net">mail@gosha.net</a> ·
-    <a rel="me" href="https://twitter.com/goshaphoto">Twitter</a> ·
+    <a rel="me" href="https://twitter.com/goshatch">Twitter</a> ·
     <a rel="me" href="https://instagram.com/gosha.tch">Instagram</a> ·
-    <a rel="me" href="https://github.com/gueorgui">GitHub</a>
+    <a rel="me" href="https://github.com/goshatch">GitHub</a>
   </p>
   <p>
     &copy; 2007&ndash;2022 Gueorgui Tcherednitchenko<br>
