--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,5 +19,5 @@ active: blog
 </article>
 <aside class="comments">
   Have a comment? Please get in touch by <a href="mailto:mail@gosha.net?subject=Re: {{ page.title }}">email</a>, or on
-  <a href="https://twitter.com/goshaphoto">Twitter</a>.
+  <a href="https://twitter.com/goshatch">Twitter</a>.
 </aside>
