--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
     <a rel="me" href="https://github.com/goshatch">GitHub</a>
   </p>
   <p>
-    &copy; 2007&ndash;2022 Gueorgui Tcherednitchenko<br>
+    &copy; 2007&ndash;2022 Gosha Tcherednitchenko<br>
     <a href="/colophon">Colophon</a> ·
     <a href="/feed.xml" class="rss-link">
       <span class="link-text">RSS</span>
