new: Add Mastodon link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
     <a href="mailto:mail@gosha.net">mail@gosha.net</a> ·
     <a rel="me" href="https://twitter.com/goshatch">Twitter</a> ·
     <a rel="me" href="https://instagram.com/gosha.tch">Instagram</a> ·
+    <a rel="me" href="https://merveilles.town/@gosha">Mastodon</a> ·
     <a rel="me" href="https://github.com/goshatch">GitHub</a>
   </p>
   <p>
