--- a/_sass/_emoji.scss
+++ b/_sass/_emoji.scss
@@ -99,3 +99,12 @@ licensed under MIT: https://ellekasai.mit-license.org/
 .twa-grinning-face-with-sweat {
   background-image: url("/assets/images/icons/grinning-face-with-sweat.svg");
 }
+.twa-flag-ukraine {
+  background-image: url("/assets/images/icons/ua-flag.svg");
+}
+.twa-sun {
+  background-image: url("/assets/images/icons/sun.svg");
+}
+.twa-moon {
+  background-image: url("/assets/images/icons/moon.svg");
+}
