--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -4,15 +4,28 @@
 
 @font-face { font-family: 'mono';                     src: url('/assets/fonts/IBMPlexMono-Text-Latin1.woff') format('woff'); }
 
-:root {
+@mixin dark-colors {
+  --color-bg: #161616;
+  --color-text: #aaa;
+  --color-text-subdued: #888888;
+  --color-link: #fff;
+  --color-link-subdued: #bbb;
+  --color-emphasis: #000000;
+}
+
+@mixin light-colors {
   --color-bg: #ffffff;
   --color-text: #444444;
   --color-text-subdued: #666666;
   --color-link: #000000;
   --color-link-subdued: #222;
+  --color-emphasis: #fff8e0;
+}
+
+:root, :root.light {
+  @include light-colors;
   --color-highlight: #c97ae6;
   --color-link-hover: var(--color-highlight);
-  --color-emphasis: #fff8e0;
   --color-emphasis-text: #888;
   --color-neutral: rgba(128, 128, 128, 0.3);
   --max-width: 36rem;
@@ -22,14 +35,13 @@
   --font-small: 0.85rem;
 }
 
+:root.dark {
+  @include dark-colors;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-bg: #161616;
-    --color-text: #aaa;
-    --color-text-subdued: #888888;
-    --color-link: #fff;
-    --color-link-subdued: #bbb;
-    --color-emphasis: #000000;
+    @include dark-colors;
   }
 }
 
