change: Improve theme toggle

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -31,8 +31,8 @@
           <i class="twa twa-high-voltage"></i> Now
         </a>
       </li>
-      <li class="dark-mode-toggle">
-        <button onClick="toggleDarkMode()">
+      <li class="theme-toggle">
+        <button onClick="toggleTheme()">
           <i class="twa twa-sun"></i>
           <i class="twa twa-moon"></i>
         </button>
