new: Add Portraits page

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -12,15 +12,20 @@
         </a>
       </li>
       <li>
+        <a class="nav-item{% if active == 'portraits' %} active{% endif %}" href="/portraits">
+          <i class="twa twa-camera"></i> Portraits
+        </a>
+      </li>
+      <li>
         <a class="nav-item{% if active == 'blog' %} active{% endif %}" href="/blog">
           <i class="twa twa-pencil"></i> Blog
         </a>
       </li>
-      <li>
+      <!-- <li>
         <a class="nav-item{% if active == 'newsletter' %} active{% endif %}" href="/newsletter">
           <i class="twa twa-love-letter"></i> Newsletter
         </a>
-      </li>
+      </li> -->
       <li>
         <a class="nav-item{% if active == 'about' %} active{% endif %}" href="/about">
           <i class="twa twa-man-raising-hand-light-skin-tone"></i> About
