--- a/_sass/_emoji.scss
+++ b/_sass/_emoji.scss
@@ -108,3 +108,6 @@ licensed under MIT: https://ellekasai.mit-license.org/
 .twa-moon {
   background-image: url("/assets/images/icons/moon.svg");
 }
+.twa-camera {
+  background-image: url("/assets/images/icons/camera.svg");
+}
