change: Add Mastodon link to blog comments aside

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,6 @@ active: blog
   {{ content }}
 </article>
 <aside class="comments">
-  Have a comment? Please get in touch by <a href="mailto:mail@gosha.net?subject=Re: {{ page.title }}">email</a>, or on
+  Have a comment? Please get in touch by <a href="mailto:mail@gosha.net?subject=Re: {{ page.title }}">email</a>, on <a href="https://merveilles.town/@gosha">Mastodon</a>, or on
   <a href="https://twitter.com/goshatch">Twitter</a>.
 </aside>
