--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ active: blog
   <header>
     <h1>{{ page.title }}</h1>
     <div class="meta">
-      <time datetime="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%e %B %Y" }}</time>, <span class="location">{{ page.location }}</span>
+      <time datetime="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%e %B, %Y" }}</time> — <span class="location">{{ page.location }}</span>
     </div>
   </header>
   {% if page.rss_only %}
