--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -208,7 +208,7 @@ figure {
     font-size: var(--font-small);
     color: var(--color-emphasis-text);
     opacity: 0.5;
-    margin: 1rem 0;
+    margin: 1rem 0 2rem;
   }
 }
 
