--- a/_layouts/project_list.html
+++ b/_layouts/project_list.html
@@ -4,19 +4,9 @@ active: projects
 title: Projects
 ---
 
-<header>
-  <h1>
-    Projects
-    <a href="/projects/feed.xml" class="rss-link">
-      <span class="link-text">Subscribe via RSS</span>
-      {% include rss_logo.svg %}
-    </a>
-  </h1>
-</header>
-
 <section class="projects-nav">
   <ul>
-    <li><a href="/projects"{% if page.active_category == 'all' %} class="active"{% endif %}>All projects</a></li>
+    <li><a href="/projects"{% if page.active_category == 'all' %} class="active"{% endif %}>All</a></li>
     <li><a href="/projects/bookdesign"{% if page.active_category == 'bookdesign' %} class="active"{% endif %}>Book design</a></li>
     <li><a href="/projects/photography"{% if page.active_category == 'photography' %} class="active"{% endif %}>Photography</a></li>
     <li><a href="/projects/publishing"{% if page.active_category == 'publishing' %} class="active"{% endif %}>Publishing</a></li>
@@ -24,6 +14,22 @@ title: Projects
     <li><a href="/projects/writing"{% if page.active_category == 'writing' %} class="active"{% endif %}>Writing</a></li>
   </ul>
 </section>
+
+<header>
+  <h1>
+    {% if page.active_category == 'all' %}All{% endif %}
+    {% if page.active_category == 'bookdesign' %}Book design{% endif %}
+    {% if page.active_category == 'photography' %}Photography{% endif %}
+    {% if page.active_category == 'publishing' %}Publishing{% endif %}
+    {% if page.active_category == 'software' %}Software{% endif %}
+    {% if page.active_category == 'writing' %}Writing{% endif %}
+    projects
+    <a href="/projects/feed.xml" class="rss-link">
+      <span class="link-text">Subscribe via RSS</span>
+      {% include rss_logo.svg %}
+    </a>
+  </h1>
+</header>
 
 {% if page.active_category == 'bookdesign' %}
   {% assign filtered_projects = site.projects | where_exp: "project", "project.categories contains 'Book design'" %}
