change: IBM Plex Mono -> Berkeley Mono

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -13,6 +13,7 @@ body .content > header > nav > ul {
   padding-left: 0;
   text-align: center;
   font-family: var(--font-mono);
+  text-transform: uppercase;
 }
 
 body .content > header > nav > ul > li {
