--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="{{ site.meta.theme_color }}">
 <base href="{{ page.url }}">
-<meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+<meta name="description" content="{% if page.description %}{{ page.description }}{% elsif page.summary %}{{ page.summary }}{% else %}{{ site.description }}{% endif %}">
 <meta name="robots" content="index,follow">
 <meta name="googlebot" content="index,follow">
 <meta name="google" content="nositelinkssearchbox">
@@ -28,9 +28,9 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="{% if page.title %}{{ page.title }} → {{ site.title }}{% else %}{{ site.title }}{% endif %}">
 {% if site.meta.default_social_image or page.featured_image %}
-  <meta property="og:image" content="{% if page.featured_image  %}{{ page.featured_image }}{% else %}{{ site.meta.default_social_image }}{% endif %}" />
+  <meta property="og:image" content="{{ site.url}}{% if page.featured_image  %}{{ page.featured_image }}{% else %}{{ site.meta.default_social_image }}{% endif %}" />
 {% endif %}
-<meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
+<meta property="og:description" content="{% if page.description %}{{ page.description }}{% elsif page.summary %}{{ page.summary }}{% else %}{{ site.description }}{% endif %}" />
 <meta property="og:site_name" content="{{ site.title }}">
 <meta property="og:locale" content="en_GB">
 <meta property="article:author" content="{{ site.author }}">
@@ -38,9 +38,9 @@
 <meta name="twitter:site" content="{{ site.meta.twitter }}">
 <meta name="twitter:creator" content="{{ site.meta.twitter }}">
 <meta name="twitter:url" content="{{ site.url}}{{ page.url }}">
-<meta name="twitter:title" content="{% if title %}{{ title }} → {{ site.title }}{% else %}{{ site.title }}{% endif %}">
-<meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+<meta name="twitter:title" content="{% if page.title %}{{ page.title }} → {{ site.title }}{% else %}{{ site.title }}{% endif %}">
+<meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% elsif page.summary %}{{ page.summary }}{% else %}{{ site.description }}{% endif %}">
 {% if site.meta.default_social_image or page.featured_image %}
-  <meta name="twitter:image" content="{% if page.featured_image  %}{{ page.featured_image }}{% else %}{{ site.meta.default_social_image }}{% endif %}">
+  <meta name="twitter:image" content="{{ site.url}}{% if page.featured_image  %}{{ page.featured_image }}{% else %}{{ site.meta.default_social_image }}{% endif %}">
 {% endif %}
 <meta name="twitter:dnt" content="on">
